Madness -- GPT won't GET will only POST so we'll just POST everytyhing! Screw you appropriately used HTTP verbs ;)
